--- a/cb/main.ipynb
+++ b/cb/main.ipynb
@@ -15,9 +15,10 @@
     "- for N most massive galaxies\n",
     "\n",
     "TODO:\n",
-    "* Add labels to all figures\n",
-    "* Improve figures (per alexie's recommendations)\n",
-    "* Plot SMF using Song's code"
+    "* finalize setup code (see song's comments)\n",
+    "* work out why we don't see much reduction in scatter\n",
+    "* plot SMF using song's helpers (https://redwoodforest.slack.com/files/U5WQ5K6BV/F8D28UNQY/simple_functions_to_estimate_stellar_mass_function.py)\n",
+    "* Add labels to plotly figures"
    ]
   },
   {
@@ -284,9 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# SMHM for cluster\n",
     "\n",
@@ -296,9 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "reload(cluster_sum)\n",
@@ -311,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "allSats = cluster_sum.centrals_with_satellites(centrals, satellites, 0.999)"
@@ -323,7 +318,6 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -388,7 +382,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Plotly\n",
     "\n",
@@ -398,7 +394,9 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# Downsample to ~ 1000 random points\n",
@@ -410,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -430,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
