--- a/cb/main.ipynb
+++ b/cb/main.ipynb
@@ -15,12 +15,9 @@
     "- for N most massive galaxies\n",
     "\n",
     "TODO:\n",
-    "* finalize setup code (see song's comments)\n",
-    "* work out why we don't see much reduction in scatter\n",
-    "* plot SMF using song's helpers (https://redwoodforest.slack.com/files/U5WQ5K6BV/F8D28UNQY/simple_functions_to_estimate_stellar_mass_function.py)\n",
-    "    * Talk to song about potential bug in calculating errors here\n",
-    "    * question about https://github.com/dr-guangtou/hsc_um2/blob/master/hsc_um2/stellar_mass_function.py#L44-L50. We are computing the error on the normalized smf and then normalizing the error again. I think this would be right if the SMF norm step came after this if block? We should compute Poisson errors on the unscaled SMF counts?\n",
-    "* Add labels to plotly figures"
+    "* Merge PR in SMF error https://github.com/dr-guangtou/hsc_um2/pull/3\n",
+    "* Once things are restructured get this ready for PR\n",
+    "* Cleanup figures"
    ]
   },
   {
@@ -344,15 +341,6 @@
     "plots.dm_vs_all_sm_error([data[0], data[1], data[2], data[5], data[9], allSats], \n",
     "                           labels = [\"No sats\", \"1 sat\", \"2 sats\", \"5 sats\", \"9 sats\", \"all sats\"])\n",
     "# You can't really see this in the scatter plots though. Errors are too small compared to range of plot"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Plotly\n",
-    "\n",
-    "Let's see if we can make some interactive plots that illustrate this better"
    ]
   },
   {
