--- a/cb/main.ipynb
+++ b/cb/main.ipynb
@@ -15,7 +15,7 @@
     "- for N most massive galaxies\n",
     "\n",
     "TODO:\n",
-    "* Merge PR in SMF error https://github.com/dr-guangtou/hsc_um2/pull/3\n",
+    "* Give song latest data\n",
     "* Once things are restructured get this ready for PR\n",
     "* Cleanup figures"
    ]
