--- a/cb/main.ipynb
+++ b/cb/main.ipynb
@@ -19,7 +19,9 @@
     "* Once things are restructured get this ready for PR\n",
     "* Cleanup figures\n",
     "* From talking to alexie, we don't just want the SMF of centrals. We want the SMF of everything.\n",
-    "* Richness vs scatter at fixed halo mass. So pick a mass bin, then plot richness (number of galaxies with mass > 10.8 ish, bin this) vs scatter."
+    "* Richness vs scatter at fixed halo mass. So pick a mass bin, then plot richness (number of galaxies with mass > 10.8 ish, bin this) vs scatter.\n",
+    "* https://docs.google.com/document/d/1kRZUw_nHksmnfgu_u6OtERTrl_w-xgio5t7WndmFQPA/edit\n",
+    "* https://redwoodforest.slack.com/archives/D6UA26L6R/p1515102490000636"
    ]
   },
   {
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "hideCode": false,
     "hideOutput": true
@@ -115,7 +117,8 @@
       " (8272347744, 8272347732,  15.14795,  17.981211,  17.33086 ,   2.83400000e+09,   1.16200000e+10,   6.35200000e+06,   8.85000000e+04,   4.44300000e-06)\n",
       " (8272346870, 8272347732,  15.26905,  17.82073 ,  17.293921,   6.65900000e+09,   2.72000000e+10,   3.12900000e+07,   0.00000000e+00,   6.26400000e-03)\n",
       " (8272347731, 8272347732,  14.98647,  17.990891,  17.164169,   1.47400000e+10,   4.73200000e+10,   1.82400000e+08,   1.30700000e+06,   7.15700000e-02)\n",
-      " (8272347088, 8272347732,  15.24826,  17.896   ,  17.214939,   9.47900000e+10,   1.40400000e+11,   7.36800000e+08,   2.81300000e+08,   4.00600000e-01)]\n"
+      " (8272347088, 8272347732,  15.24826,  17.896   ,  17.214939,   9.47900000e+10,   1.40400000e+11,   7.36800000e+08,   2.81300000e+08,   4.00600000e-01)]\n",
+      "[ (8272347969, -1,  14.21056,  17.447241,  16.636551,   1.50900000e+14,   1.50900000e+14,   6.12800000e+10,   3.86600000e+11,  0.1818)]\n"
      ]
     }
    ],
@@ -123,7 +126,8 @@
     "print(centrals.dtype)\n",
     "print(len(centrals))\n",
     "print(len(satellites))\n",
-    "print(satellites[:10])"
+    "print(satellites[:10])\n",
+    "print(centrals[centrals['id'] == 8272347969])"
    ]
   },
   {
@@ -396,8 +400,7 @@
     "    np.min(stellar_masses), np.max(stellar_masses),\n",
     ")\n",
     "print(x, y, err)\n",
-    "ax.errorbar(x, y, yerr = err)\n",
-    "ax."
+    "ax.errorbar(x, y, yerr = err)"
    ]
   },
   {
