#5 start the notebook for new UM model

--- a/note/um_smdpl_organize_gal_catalog.ipynb
+++ b/note/um_smdpl_organize_gal_catalog.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-04T18:32:41.138711Z",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-04T18:34:12.695638Z",
@@ -131,8 +131,8 @@
    ],
    "source": [
     "# Setup environment \n",
-    "#envir = s16a_path.set_env(version='astro5')\n",
-    "envir = s16a_path.set_env(version='kungpao')\n",
+    "envir = s16a_path.set_env(version='astro5')\n",
+    "#envir = s16a_path.set_env(version='kungpao')\n",
     "\n",
     "# Folder for new UM model \n",
     "um_dir = os.path.join(envir['s16a'], 'um2/um2_new')\n",
@@ -191,6 +191,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -206,31 +207,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   },
+  "nav_menu": {},
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "navigate_num": "#000000",
-    "navigate_text": "#333333",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700",
-    "sidebar_border": "#EEEEEE",
-    "wrapper_background": "#FFFFFF"
-   },
-   "moveMenuLeft": true,
-   "nav_menu": {
-    "height": "81px",
-    "width": "252px"
-   },
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
    "threshold": 4,
    "toc_cell": false,
    "toc_section_display": "block",
-   "toc_window_display": false,
-   "widenNotebook": false
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
