--- a/note/um_smdpl_organize_gal_catalog.ipynb
+++ b/note/um_smdpl_organize_gal_catalog.ipynb
@@ -38,14 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-04T18:22:35.820881Z",
      "start_time": "2018-01-04T18:22:34.583163Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload \n",
@@ -73,6 +82,8 @@
     "# Personal repo\n",
     "from stellar_mass_function import compute_smf, \\\n",
     "    bootstrap_smf\n",
+    "from load_mdpl2_mock import value_added_smdpl_mock\n",
+    "from model_predictions import total_stellar_mass_including_satellites\n",
     "    \n",
     "from hsc_massive import \\\n",
     "    s16a_path, \\\n",
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-04T18:32:41.138711Z",
@@ -94,7 +105,7 @@
    },
    "outputs": [],
    "source": [
-    "from astropy.table import Table, Column"
+    "from astropy.table import Table, Column, vstack"
    ]
   },
   {
@@ -159,34 +170,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-04T18:33:06.954497Z",
      "start_time": "2018-01-04T18:33:06.015853Z"
     }
    },
+   "outputs": [],
+   "source": [
+    "# vstack the centrals and satellites \n",
+    "\n",
+    "um_smdpl_old_all = vstack([um_smdpl_old_cen, um_smdpl_old_sat])\n",
+    "um_smdpl_new_all = vstack([um_smdpl_new_cen, um_smdpl_new_sat])\n",
+    "\n",
+    "# Value added the catalogs \n",
+    "um_smdpl_old_all = value_added_smdpl_mock(um_smdpl_old_all)\n",
+    "um_smdpl_new_all = value_added_smdpl_mock(um_smdpl_new_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "def umPrepCatalog(um_mock, um_min_mvir=None):\n",
+    "    \"\"\"\n",
+    "    Prepare the UniverseMachine mock catalog.\n",
+    "\n",
+    "    The goal is to prepare a FITS catalog that include all\n",
+    "    necessary information.\n",
+    "    During the modeling part, we just need to load this catalog once.\n",
+    "    \"\"\"\n",
+    "    # Sort the catalog based on the host halo ID\n",
+    "    um_mock.sort('halo_hostid')\n",
+    "\n",
+    "    # Make a mask for central galaxies\n",
+    "    mask_central = um_mock['upid'] == -1\n",
+    "    um_mock.add_column(Column(data=mask_central,\n",
+    "                              name='mask_central'))\n",
+    "\n",
+    "    # Add a column as the BCG+ICL mass\n",
+    "    um_mock.add_column(Column(data=(um_mock['sm'] + um_mock['icl']),\n",
+    "                              name='mtot_galaxy'))\n",
+    "\n",
+    "    # Total stellar masses within a halo, including the satellites\n",
+    "    mstar_mhalo = total_stellar_mass_including_satellites(um_mock,\n",
+    "                                                          'mtot_galaxy')\n",
+    "    um_mock.add_column(Column(data=mstar_mhalo,\n",
+    "                              name='mstar_mhalo'))\n",
+    "\n",
+    "    # Add log10(Mass)\n",
+    "    # Stellar mass\n",
+    "    um_mock.add_column(Column(data=np.log10(um_mock['sm']),\n",
+    "                              name='logms_gal'))\n",
+    "    um_mock.add_column(Column(data=np.log10(um_mock['icl']),\n",
+    "                              name='logms_icl'))\n",
+    "    um_mock.add_column(Column(data=np.log10(um_mock['mtot_galaxy']),\n",
+    "                              name='logms_tot'))\n",
+    "    um_mock.add_column(Column(data=np.log10(um_mock['mstar_mhalo']),\n",
+    "                              name='logms_halo'))\n",
+    "    # Halo mass\n",
+    "    um_mock.add_column(Column(data=np.log10(um_mock['mvir']),\n",
+    "                              name='logmh_vir'))\n",
+    "    um_mock.add_column(Column(data=np.log10(um_mock['mpeak']),\n",
+    "                              name='logmh_peak'))\n",
+    "    um_mock.add_column(Column(data=np.log10(um_mock['host_halo_mvir']),\n",
+    "                              name='logmh_host'))\n",
+    "    \n",
+    "    um_mock.rename_column('host_halo_mvir', 'mhalo_host')\n",
+    "\n",
+    "    if um_min_mvir is not None:\n",
+    "        um_mock = um_mock[um_mock['logmh_host'] >= um_min_mvir]\n",
+    "\n",
+    "    return um_mock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ (       8272347655, 8272347654,   13.83487 ,   18.749399,   16.14661 ,   1.98400000e+09,   3.11700000e+09,   2.31400000e+05,   0.00000000e+00,   6.41000000e-05),\n",
-       "       (       8272348262, 8272347732,   15.026   ,   17.7521  ,   17.388531,   1.98400000e+09,   2.26700000e+09,   1.15200000e+03,   0.00000000e+00,   2.51000000e-06),\n",
-       "       (       8272348449, 8272347732,   15.09965 ,   17.864719,   17.39245 ,   4.10900000e+09,   9.77600000e+09,   3.21900000e+05,   0.00000000e+00,   1.55000000e-04),\n",
-       "       ...,\n",
-       "       (34000004223609451, 8360215083,  384.851227,  396.654236,  391.585083,   1.63100000e+10,   1.29100000e+11,   1.37000000e+09,   2.81900000e+06,   1.15700000e-02),\n",
-       "       (       8360215126, 8360215083,  384.742859,  396.397644,  391.56073 ,   5.68200000e+10,   2.57900000e+11,   1.36100000e+09,   2.40200000e+08,   1.95500000e-03),\n",
-       "       (       8360215113, 8360215083,  385.014954,  396.380035,  391.405884,   1.33400000e+12,   3.05400000e+12,   5.34800000e+10,   1.04400000e+09,   9.21700000e-03)],\n",
-       "      dtype=[('id', '<i8'), ('upid', '<i8'), ('x', '<f8'), ('y', '<f8'), ('z', '<f8'), ('m', '<f8'), ('mp', '<f8'), ('sm', '<f8'), ('icl', '<f8'), ('sfr', '<f8')])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['halo_id', 'upid', 'x', 'y', 'z', 'mvir', 'mpeak', 'sm', 'icl', 'sfr', 'halo_hostid', 'mhalo_host', 'mask_central', 'mtot_galaxy', 'mstar_mhalo', 'logms_gal', 'logms_icl', 'logms_tot', 'logms_halo', 'logmh_vir', 'logmh_peak', 'logmh_host']\n",
+      "11193763\n"
+     ]
     }
    ],
    "source": [
-    "um_smdpl_old['satellites']"
+    "um_smdpl_old_all_vagc = umPrepCatalog(um_smdpl_old_all, um_min_mvir=11.5)\n",
+    "um_smdpl_new_all_vagc = umPrepCatalog(um_smdpl_new_all, um_min_mvir=11.5)\n",
+    "\n",
+    "print(um_smdpl_new_all_vagc.colnames)\n",
+    "print(len(um_smdpl_new_all_vagc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the results\n",
+    "\n",
+    "# FITS table\n",
+    "um_smdpl_old_all_vagc.write(os.path.join(um_dir,\n",
+    "                                         'um_smdpl_0.7124_old_vagc_mhost_11.5.fits'),\n",
+    "                            format='fits', overwrite=True)\n",
+    "um_smdpl_new_all_vagc.write(os.path.join(um_dir,\n",
+    "                                         'um_smdpl_0.7124_new_vagc_mhost_11.5.fits'),\n",
+    "                            format='fits', overwrite=True)\n",
+    "\n",
+    "# Numpy array \n",
+    "np.save(os.path.join(um_dir,\n",
+    "                     'um_smdpl_0.7124_old_vagc_mhost_11.5.npy'),\n",
+    "        np.asarray(um_smdpl_old_all_vagc)\n",
+    "       )\n",
+    "np.save(os.path.join(um_dir,\n",
+    "                     'um_smdpl_0.7124_new_vagc_mhost_11.5.npy'),\n",
+    "        np.asarray(um_smdpl_new_all_vagc)\n",
+    "       )"
    ]
   }
  ],
