#5 select the galaxies in massive halos

--- a/note/um_smdpl_organize_gal_catalog.ipynb
+++ b/note/um_smdpl_organize_gal_catalog.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-04T18:33:06.954497Z",
@@ -191,13 +191,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
-    "def umPrepCatalog(um_mock, um_min_mvir=None):\n",
+    "def umPrepCatalog(um_mock, um_min_mvir=None, use_mvir=False):\n",
     "    \"\"\"\n",
     "    Prepare the UniverseMachine mock catalog.\n",
     "\n",
@@ -244,14 +246,19 @@
     "    um_mock.rename_column('host_halo_mvir', 'mhalo_host')\n",
     "\n",
     "    if um_min_mvir is not None:\n",
-    "        um_mock = um_mock[um_mock['logmh_host'] >= um_min_mvir]\n",
+    "        if use_mvir:\n",
+    "            um_mock_use = um_mock[um_mock['logmh_vir'] >= um_min_mvir]\n",
+    "        else:\n",
+    "            um_mock_use = um_mock[um_mock['logmh_host'] >= um_min_mvir]\n",
+    "    else:\n",
+    "        um_mock_use = um_mock\n",
     "\n",
-    "    return um_mock"
+    "    return um_mock_use"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -295,6 +302,62 @@
     "np.save(os.path.join(um_dir,\n",
     "                     'um_smdpl_0.7124_new_vagc_mhost_11.5.npy'),\n",
     "        np.asarray(um_smdpl_new_all_vagc)\n",
+    "       )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Select a sample of galaxies in massive haloes for our model\n",
+    "\n",
+    "* Choose logMh_peak > 11.5 for now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "806306\n"
+     ]
+    }
+   ],
+   "source": [
+    "um_smdpl_old_mvagc = um_smdpl_old_all[um_smdpl_old_all['logmh_peak'] >= 11.5]\n",
+    "um_smdpl_new_mvagc = um_smdpl_new_all[um_smdpl_new_all['logmh_peak'] >= 11.5]\n",
+    "\n",
+    "print(len(um_smdpl_new_mvagc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the results\n",
+    "\n",
+    "# FITS table\n",
+    "um_smdpl_old_mvagc.write(os.path.join(um_dir,\n",
+    "                                      'um_smdpl_0.7124_old_vagc_mpeak_11.5.fits'),\n",
+    "                            format='fits', overwrite=True)\n",
+    "um_smdpl_new_mvagc.write(os.path.join(um_dir,\n",
+    "                                      'um_smdpl_0.7124_new_vagc_mpeak_11.5.fits'),\n",
+    "                            format='fits', overwrite=True)\n",
+    "\n",
+    "# Numpy array \n",
+    "np.save(os.path.join(um_dir,\n",
+    "                     'um_smdpl_0.7124_old_vagc_mpeak_11.5.npy'),\n",
+    "        np.asarray(um_smdpl_old_mvagc)\n",
+    "       )\n",
+    "np.save(os.path.join(um_dir,\n",
+    "                     'um_smdpl_0.7124_new_vagc_mpeak_11.5.npy'),\n",
+    "        np.asarray(um_smdpl_new_mvagc)\n",
     "       )"
    ]
   }
